V9.0.17
#####################################
8339a0fc1 Added working test for fund ratio computation
f1d5a5e12 Fixed tests for fund_units
486eb2653 Added allocation of fund units for remittances based on multiple payments
054e27f41 Added roll_up default to false for FundFormulas
ae25dedaf Auto lock the Allocation runs which are a week old
593a75a62 Removed documents from calls
e496a229f Changed Fund stats folio count to only have Folios with > 0 commitment amount
1638007c7 Removed investor composition chart in funds dashboard
e0eb925db Added sum of portfolio income to API stats
95152be77 Added tests for FundRation, needs to be improved
9a2e8545f Removed Entity name from mailer layout
33650f777 Removed additional Acct entry btns post allocation run
f49279ca0 Moved some js to vendors and some to importmaps
28d02da12 Runs, but not tested
b868152fe First draft of fund_ratio_multi_fund_calcs
8d8125c5d Added scenario to FundRatio

V9.0.16
#####################################
1168ff89c Fixed unrealized gain only for buys
535df0ea4 Removed config.host to application.rb
52ad617f1 Knowledge folder (#772)
1f814a3f5 Removed perform_all_calculations after_initialize to improve performance
7eb72b3c7 Allocation run: Adds the run id to each account entry to enable filtering by run (#771)

V9.0.15
#####################################
965e867ae Root docs fix (#770)
cada6596f aml spec fix for upload server app (#769)
f02321036 Capital Dist fixes (#768)
18fbbd3a0 Handle AML response if it is an array (#766)
80ec85f34 Merge branch 'main' of github.com:ausangshukla/IRM
0222ca89f Fixed dashboard_widget form selec dropdown
f24ba8e39 Now Doc LLM Validation works with Gemini and openai
618b5c27a Fixed doc validation tests
1a4a28796 Fixed the Ai checks using openAI
c619a67d8 Added Gemini key to prod
fd14d665a Now supports Gemini models (#764)

V9.0.14
#####################################
59237f685 Inv fund docs bug fix (#763)
fdf8987dd Added error handling for doc_llm_validator